--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
 
       <div class="skill-block" style="--delay: 0.2s;">
         <h3>Graphics Designer</h3>
-        <p>Let's design Logos, Banners and so on.</p>
+        <p>...</p>
       </div>
 
       <div class="skill-block" style="--delay: 0.4s;">
         <h3>Project Management</h3>
-        <p>Let's put your idea into great development mode documenation.</p>
+        <p>...</p>
       </div>
 
     </div>
@@ -315,6 +315,45 @@
       </div>
 
       <!-- Add more news cards as needed -->
+
+ <!-- News Card -->
+      <div class="col-md-4">
+        <div class="card news-card">
+          <div id="newsCarousel1" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="assets/newz/meta.jpeg" class="d-block w-100" alt="News Image 1">
+              </div>
+              <!-- <div class="carousel-item">
+                <img src="assets/newz/logo.png" class="d-block w-100" alt="News Image 2">
+              </div> -->
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#newsCarousel1" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon"></span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#newsCarousel1" data-bs-slide="next">
+              <span class="carousel-control-next-icon"></span>
+            </button>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Meta Company</h5>
+            <p class="card-text">
+              Meta Platforms, formerly Facebook, is a tech giant focused on social media and the metaverse. 
+              Its core products—Facebook, Instagram, WhatsApp, and Messenger—generate substantial advertising revenue, 
+              making Meta one of the world’s most valuable companies with a market cap of nearly $2 trillion. 
+              Key innovations include the Meta Quest VR headsets, 
+              AI-powered smart glasses, and large language models like Llama. 
+              The company is actively building a future centered on virtual and augmented reality to create interconnected digital experiences.
+              <b>What have you interested in Meta Company ?</b>
+            </p>
+            <button class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#commentModal">Comment</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Add more news cards as needed -->
+
+      
       <!-- News Card -->
       <div class="col-md-4">
         <div class="card news-card">
@@ -543,3 +582,4 @@ KISO is launching an online version of its Smart Manager System, giving users th
 
 </body>
 </html>
+
