--- a/index.html
+++ b/index.html
@@ -128,17 +128,17 @@
       <!-- Skill Block  -->
       <div class="skill-block" style="--delay: 0s;">
         <h3>Software Development</h3>
-        <p>Mobile Apps, Web App and desktop apps.</p>
+<!--         <p>Mobile Apps, Web App and desktop apps.</p> -->
       </div>
 
       <div class="skill-block" style="--delay: 0.2s;">
         <h3>Graphics Designer</h3>
-        <p>...</p>
+<!--         <p>...</p> -->
       </div>
 
       <div class="skill-block" style="--delay: 0.4s;">
         <h3>Project Management</h3>
-        <p>...</p>
+<!--         <p>...</p> -->
       </div>
 
     </div>
@@ -310,8 +310,8 @@
 His career began with a series of successful startups: he co-founded <b>Zip2</b>, an online city guide, and then <b>X.com</b>, which became PayPal. After the sale of PayPal, 
               he founded <b>SpaceX</b> in 2002 to pioneer reusable rockets and commercial spaceflight, with the long-term goal of colonizing Mars.
 
-He then joined <b></b>Tesla</b> as a major investor in 2004 and became CEO in 2008, leading the company to dominate the electric vehicle market. His other ventures include <b>Neuralink</b>, 
-              focusing on brain-computer interfaces, <b>The Boring Company</b>, for tunnel-based transportation, and <b></b>xAI</b>, his latest AI company that acquired X (formerly Twitter).</b>
+He then joined <b>Tesla</b> as a major investor in 2004 and became CEO in 2008, leading the company to dominate the electric vehicle market. His other ventures include <b>Neuralink</b>, 
+              focusing on brain-computer interfaces, <b>The Boring Company</b>, for tunnel-based transportation, and <b>xAI</b>, his latest AI company that acquired X (formerly Twitter).
             </p>
             <button class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#commentModal">Comment</button>
           </div>
@@ -339,8 +339,10 @@ He then joined <b></b>Tesla</b> as a major investor in 2004 and became CEO in 20
           <div class="card-body">
             <h5 class="card-title">Alexander Wang</h5>
             <p class="card-text">
-              Alexander Wang is a prominent American entrepreneur and the co-founder of Scale AI, a company that provides data labeling and model evaluation for AI development. Born in Los Alamos, New Mexico, to physicists, he showed an early talent for computer science.
-            Wang dropped out of MIT at 19 to co-found Scale AI in 2016. Under his leadership, the company quickly became a crucial partner for businesses and governments working with artificial intelligence. His success led him to become the world's youngest self-made billionaire at age 24. He stepped down as CEO of Scale AI in 2025 to join Meta but remains on the company's board.
+              Alexander Wang is a prominent American entrepreneur and the co-founder of Scale AI, a company that provides data labeling and model evaluation for AI development. 
+              Born in Los Alamos, New Mexico, to physicists, he showed an early talent for computer science.
+            Wang dropped out of MIT at 19 to co-found Scale AI in 2016. Under his leadership, the company quickly became a crucial partner for businesses and governments working with artificial intelligence. 
+              His success led him to become the world's youngest self-made billionaire at age 24. He stepped down as CEO of Scale AI in 2025 to join Meta but remains on the company's board.
             <b>Who is ur favrite man in the list???</b>
             </p>
             <button class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#commentModal">Comment</button>
@@ -370,7 +372,7 @@ He then joined <b></b>Tesla</b> as a major investor in 2004 and became CEO in 20
             <h5 class="card-title">Meta Company</h5>
             <p class="card-text">
               Meta Platforms, formerly Facebook, is a tech giant focused on social media and the metaverse. 
-              Its core products—Facebook, Instagram, WhatsApp, and Messenger—generate substantial advertising revenue, 
+              Its core products Facebook, Instagram, WhatsApp, and Messenger generate substantial advertising revenue, 
               making Meta one of the world’s most valuable companies with a market cap of nearly $2 trillion. 
               Key innovations include the Meta Quest VR headsets, 
               AI-powered smart glasses, and large language models like Llama. 
@@ -651,5 +653,6 @@ KISO is launching an online version of its Smart Manager System, giving users th
 
 </body>
 </html>
+
 
 
