--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ He then joined <b>Tesla</b> as a major investor in 2004 and became CEO in 2008, 
           <div id="newsCarousel1" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="assets/newz/chatgpt.png" class="d-block w-100" alt="News Image 1">
+                <img src="assets/newz/gpt.png" class="d-block w-100" alt="News Image 1">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#newsCarousel1" data-bs-slide="prev">
@@ -653,6 +653,7 @@ KISO is launching an online version of its Smart Manager System, giving users th
 
 </body>
 </html>
+
 
 
 
