--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
       </button>
       <div class="collapse navbar-collapse text-center" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
+          <li class="nav-item active"><a class="nav-link" href="#home">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
           <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="#contacts">Contact</a></li>
         </ul>
       </div>
@@ -40,7 +41,7 @@
   </nav>
 
   <!-- Electrified Welcome Section -->
-<section class="welcome-section">
+<section class="welcome-section" id="home">
   <div class="container">
      <div class="intro-text">
     <h1 class="typewriter fs-3">“Code is meaningless,<br>
@@ -653,6 +654,7 @@ KISO is launching an online version of its Smart Manager System, giving users th
 
 </body>
 </html>
+
 
 
 
