--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 <!-- News Overlay -->
 <div id="newsOverlay">
   <div class="news-header">
-    <h2>Latest News</h2>
+    <h2>Tech Tock</h2>
     <button class="btn btn-outline-danger" id="closeNews">Close</button>
   </div>
   <div class="news-content container">
@@ -654,6 +654,7 @@ KISO is launching an online version of its Smart Manager System, giving users th
 
 </body>
 </html>
+
 
 
 
