--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 <!-- floating button -->
 <!-- Floating News Button -->
 <div id="newsToggleBtn">
-  <i class="bi bi-broadcast-pin"></i>
+  <i class="bi bi-bell"></i>
 </div>
 <!-- newz tab -->
 <!-- News Overlay -->
@@ -654,6 +654,7 @@ KISO is launching an online version of its Smart Manager System, giving users th
 
 </body>
 </html>
+
 
 
 
