--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form id="myForm">
+        <form id="myForm" action="https://formsubmit.co/kingcodes001@gmail.com" method="POST">
           <div class="mb-3">
             <label for="nameInput" class="form-label">Your Name</label>
             <input type="text" class="form-control" id="nameInput" required>
@@ -106,6 +106,10 @@
             <label for="orderDetails" class="form-label">Order Details</label>
             <textarea class="form-control" id="orderDetails" rows="3" required></textarea>
           </div>
+          <input type="hidden" name="_next" value="https://kingcodes001.github.io">
+          <input type="hidden" name="_subject" value="New order">
+          <input type="hidden" name="_template" value="box">
+          <input type="hidden" name="_captcha" value="false">
           <button type="submit" class="btn btn-primary w-100">Submit Order</button>
         </form>
       </div>
@@ -249,7 +253,7 @@
         <button type="button" class="btn-close" onclick="closeCommentModal()"></button>
       </div>
       <div class="modal-body">
-        <form id="myForm">
+        <form id="myForm" action="https://formsubmit.co/kingcodes001@gmail.com" method="POST">
           <div class="mb-3">
             <label for="commentName" class="form-label">Your email</label>
             <input type="email" class="form-control" id="commentName" required>
@@ -262,6 +266,10 @@
             <label for="commentText" class="form-label">Your Comment</label>
             <textarea class="form-control" id="commentText" rows="3" required></textarea>
           </div>
+          <input type="hidden" name="_next" value="https://kingcodes001.github.io">
+          <input type="hidden" name="_subject" value="Projects Comment">
+          <input type="hidden" name="_template" value="box">
+          <input type="hidden" name="_captcha" value="false">
           <button type="submit" class="btn btn-primary w-100">Send Comment</button>
         </form>
       </div>
@@ -531,9 +539,13 @@ KISO is launching an online version of its Smart Manager System, giving users th
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body">
-        <form id="myForm">
+        <form id="myForm" action="https://formsubmit.co/kingcodes001@gmail.com" method="POST">
           <input type="text" class="form-control mb-3" placeholder="Your Name" required>
           <textarea class="form-control mb-3" rows="3" placeholder="Your Comment" required></textarea>
+          <input type="hidden" name="_next" value="https://kingcodes001.github.io">
+          <input type="hidden" name="_subject" value="News Comment">
+          <input type="hidden" name="_template" value="box">
+          <input type="hidden" name="_captcha" value="false">
           <button type="submit" class="btn btn-primary w-100">Send</button>
         </form>
       </div>
@@ -593,13 +605,17 @@ KISO is launching an online version of its Smart Manager System, giving users th
         <h5 class="modal-title" id="orderModalLabel">Order Service: <span id="selectedService"></span></h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
-      <form id="myForm">
+      <form id="myForm" action="https://formsubmit.co/kingcodes001@gmail.com" method="POST">
         <div class="modal-body">
           <input type="text" class="form-control mb-3" placeholder="Your Name" required>
           <input type="email" class="form-control mb-3" placeholder="Your Email" required>
           <textarea class="form-control mb-3" rows="3" placeholder="Project Details" required></textarea>
         </div>
         <div class="modal-footer">
+          <input type="hidden" name="_next" value="https://kingcodes001.github.io">
+          <input type="hidden" name="_subject" value="New Order">
+          <input type="hidden" name="_template" value="box">
+          <input type="hidden" name="_captcha" value="false">
           <button type="submit" class="btn btn-primary w-100">Submit Request</button>
         </div>
       </form>
@@ -616,7 +632,11 @@ KISO is launching an online version of its Smart Manager System, giving users th
       <h2 class="section-title">Contact Me</h2>
       <p class="section-subtitle">I'd love to hear from you! Fill out the form below and I'll get back to you soon.</p>
     </div>
-    <form id="myForm">
+    <form id="myForm" action="https://formsubmit.co/kingcodes001@gmail.com" method="POST">
+      <input type="hidden" name="_next" value="https://kingcodes001.github.io">
+      <input type="hidden" name="_subject" value="Message">
+      <input type="hidden" name="_template" value="box">
+      <input type="hidden" name="_captcha" value="false">
       <div class="row g-3">
         <div class="col-md-6">
           <input type="text" class="form-control custom-input" placeholder="Your Name" required>
@@ -654,6 +674,7 @@ KISO is launching an online version of its Smart Manager System, giving users th
 
 </body>
 </html>
+
 
 
 
