--- a/index.html
+++ b/index.html
@@ -96,15 +96,15 @@
         <form id="myForm" action="https://formsubmit.co/kingcodes001@gmail.com" method="POST">
           <div class="mb-3">
             <label for="nameInput" class="form-label">Your Name</label>
-            <input type="text" class="form-control" id="nameInput" required>
+            <input type="text" class="form-control" id="nameInput" name="Client_name" required>
           </div>
           <div class="mb-3">
             <label for="emailInput" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="emailInput" required>
+            <input type="email" class="form-control" id="emailInput" name="client_address" required>
           </div>
           <div class="mb-3">
             <label for="orderDetails" class="form-label">Order Details</label>
-            <textarea class="form-control" id="orderDetails" rows="3" required></textarea>
+            <textarea class="form-control" id="orderDetails" rows="3" name="client_description" required></textarea>
           </div>
           <input type="hidden" name="_next" value="https://kingcodes001.github.io">
           <input type="hidden" name="_subject" value="New order">
@@ -255,16 +255,16 @@
       <div class="modal-body">
         <form id="myForm" action="https://formsubmit.co/kingcodes001@gmail.com" method="POST">
           <div class="mb-3">
-            <label for="commentName" class="form-label">Your email</label>
-            <input type="email" class="form-control" id="commentName" required>
+            <label for="commentName" class="form-label">Your Name</label>
+            <input type="text" class="form-control" id="commentName" name="visitor_name" required>
           </div>
           <div class="mb-3">
-            <label for="commentName" class="form-label">Your Name</label>
-            <input type="text" class="form-control" id="commentName" required>
+            <label for="commentName" class="form-label">Your email</label>
+            <input type="email" class="form-control" id="commentName" name="visitor_email" required>
           </div>
           <div class="mb-3">
             <label for="commentText" class="form-label">Your Comment</label>
-            <textarea class="form-control" id="commentText" rows="3" required></textarea>
+            <textarea class="form-control" id="commentText" rows="3" name="visitor_comment" required></textarea>
           </div>
           <input type="hidden" name="_next" value="https://kingcodes001.github.io">
           <input type="hidden" name="_subject" value="Projects Comment">
@@ -540,8 +540,8 @@ KISO is launching an online version of its Smart Manager System, giving users th
       </div>
       <div class="modal-body">
         <form id="myForm" action="https://formsubmit.co/kingcodes001@gmail.com" method="POST">
-          <input type="text" class="form-control mb-3" placeholder="Your Name" required>
-          <textarea class="form-control mb-3" rows="3" placeholder="Your Comment" required></textarea>
+          <input type="text" class="form-control mb-3" placeholder="Your Name" name="visitor_name" required>
+          <textarea class="form-control mb-3" rows="3" placeholder="Your Comment" name="visitor_comment" required></textarea>
           <input type="hidden" name="_next" value="https://kingcodes001.github.io">
           <input type="hidden" name="_subject" value="News Comment">
           <input type="hidden" name="_template" value="box">
@@ -607,9 +607,9 @@ KISO is launching an online version of its Smart Manager System, giving users th
       </div>
       <form id="myForm" action="https://formsubmit.co/kingcodes001@gmail.com" method="POST">
         <div class="modal-body">
-          <input type="text" class="form-control mb-3" placeholder="Your Name" required>
-          <input type="email" class="form-control mb-3" placeholder="Your Email" required>
-          <textarea class="form-control mb-3" rows="3" placeholder="Project Details" required></textarea>
+          <input type="text" class="form-control mb-3" placeholder="Your Name" name="client_name" required>
+          <input type="email" class="form-control mb-3" placeholder="Your Email" name="client_email" required>
+          <textarea class="form-control mb-3" rows="3" placeholder="Project Details" name="client_description" required></textarea>
         </div>
         <div class="modal-footer">
           <input type="hidden" name="_next" value="https://kingcodes001.github.io">
@@ -639,16 +639,16 @@ KISO is launching an online version of its Smart Manager System, giving users th
       <input type="hidden" name="_captcha" value="false">
       <div class="row g-3">
         <div class="col-md-6">
-          <input type="text" class="form-control custom-input" placeholder="Your Name" required>
+          <input type="text" class="form-control custom-input" placeholder="Your Name" name="visitor_name" required>
         </div>
         <div class="col-md-6">
-          <input type="email" class="form-control custom-input" placeholder="Your Email" required>
+          <input type="email" class="form-control custom-input" placeholder="Your Email" name="visitor_email" required>
         </div>
         <div class="col-12">
-          <input type="text" class="form-control custom-input" placeholder="Subject" required>
+          <input type="text" class="form-control custom-input" placeholder="Subject" name="visitor_subject" required>
         </div>
         <div class="col-12">
-          <textarea class="form-control custom-input" rows="5" placeholder="Your Message" required></textarea>
+          <textarea class="form-control custom-input" rows="5" placeholder="Your Message" name="visitor_message" required></textarea>
         </div>
         <div class="col-12 text-center">
           <button type="submit" class="btn btn-primary custom-btn">Send Message</button>
@@ -674,6 +674,7 @@ KISO is launching an online version of its Smart Manager System, giving users th
 
 </body>
 </html>
+
 
 
 
