--- a/index.html
+++ b/index.html
@@ -236,8 +236,42 @@
             <span class="carousel-control-next-icon"></span>
           </button>
         </div>
-        <p>Smart manager sytem is a product made by KISO company via its special teach known <b><i>kisoft Team</i></b>. </p>
+        <p>Smart manager sytem is a product made by KISO company via its special team known <b><i>kisoft Team</i></b>. </p>
         <p>Smart manager is a next generation software solution that empower your business by giving your an accuratte picture of your business growth by tracking spendings, profits, loss and sales</p>
+        Smart Manager system is well designed for operating on 
+        <ul>
+          <li>Products Management</li>
+          The system includes specialized tools to assist users/shopkeepers in efficiently managing their products. 
+          Key functionalities include product registration, monitoring inventory levels, 
+          and identifying overstocked or understocked items to ensure optimal stock control within the shop.
+          <li>Inventory Management</li>
+          This feature helps shopkeepers manage the sale of goods by providing tools for tracking inventory, 
+          recording sales history, and analyzing sales data. It simplifies the process of monitoring stock levels, 
+          controlling product flow, and ensuring accurate record-keeping for better decision-making.
+          <li>Loan Management</li>
+          The system is built with best features to support effective tracking and management of loans. 
+          It helps shop owners minimize the risk of bad debts by monitoring all creditors and outstanding balances. 
+          With automated tracking and alerts, users can stay informed about loan statuses and ensure better financial control
+          <li>Shop Analysis</li>
+          To simplify shop management, 
+          the system is built with advanced algorithms that generate insightful reports on ongoing shop activities. 
+          It provides a clear summary of the shop’s current status, 
+          helping users understand performance trends by analyzing the relationship between investment and profit. 
+          This enables smarter decision-making and better financial oversight of a shop.
+          <li>Expenses Tracking</li>
+          This feature plays a vital role in managing both expenses and assets within the shop. 
+          The system generates comprehensive reports on ongoing financial activities, 
+          helping users monitor spending, evaluate cost efficiency, 
+          and understand the overall financial outcome of the business. 
+          It ensures that every expense is accounted for and contributes to a clear picture of the shop’s performance.
+        </ul>
+        <p>Using the Smart Manager System is the best option for many shopkeepers to create a conducive environment for easy shop management. 
+          The system focuses on analyzing your shop’s performance while you concentrate on improving shop operation. 
+          Smart Manager is about to be launched stay tuned and keep your eyes on this page on 27/09/2025, 
+          when we complete all final tests for <b>Version 1</b>.
+        <i>Our slogan:<br>
+        “Use Smart Manager for Better Profitable Shop.</i>
+</p>
         <button class="btn btn-outline-primary" onclick="openCommentModal()">Leave a Comment</button>
       </div>
     </div>
@@ -518,7 +552,8 @@ The company's history culminated in the viral launch of <b>ChatGPT</b> in Novemb
             <h5 class="card-title">Smart Manager Launching</h5>
             <p class="card-text">
               <br>
-KISO is launching an online version of its Smart Manager System, giving users the ability to manage their shops from anywhere using the internet. The company plans to release the free-to-use system before September 27, 2025. KISO is asking for public support for the launch, highlighting that this new feature will be very helpful for all shop managers and keepers. </p>
+KISO is launching an online version of its Smart Manager System, giving users the ability to manage their shops from anywhere using the internet. 
+              The company plans to release the free-to-use system before September 27, 2025. KISO is asking for public support for the launch, highlighting that this new feature will be very helpful for all shop managers and keepers. </p>
             <button class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#commentModal">Comment</button>
           </div>
         </div>
@@ -674,6 +709,7 @@ KISO is launching an online version of its Smart Manager System, giving users th
 
 </body>
 </html>
+
 
 
 
