--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <ul class="navbar-nav ms-auto">
           <li class="nav-item active"><a class="nav-link" href="#home">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+<!--           <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li> -->
           <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
           <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="#contacts">Contact</a></li>
@@ -125,31 +125,31 @@
 
 
 
-<section class="skills-reveal py-5" id="skills">
+<!-- <section class="skills-reveal py-5" id="skills">
   <div class="container">
     <h2 class="section-title text-center mb-5">My Skillz</h2>
     <div class="skills-wrapper">
 
-      <!-- Skill Block  -->
+      Skill Block 
       <div class="skill-block" style="--delay: 0s;">
         <h3>Software Development</h3>
-<!--         <p>Mobile Apps, Web App and desktop apps.</p> -->
+        <p>Mobile Apps, Web App and desktop apps.</p>
       </div>
 
       <div class="skill-block" style="--delay: 0.2s;">
         <h3>Graphics Designer</h3>
-<!--         <p>...</p> -->
+        <p>...</p>
       </div>
 
       <div class="skill-block" style="--delay: 0.4s;">
         <h3>Project Management</h3>
-<!--         <p>...</p> -->
+        <p>...</p>
       </div>
 
     </div>
   </div>
 </section> 
-
+ -->
 
 <section class="projects-section py-5 bg-light" id="projects">
   <div class="container">
@@ -709,6 +709,7 @@ KISO is launching an online version of its Smart Manager System, giving users th
 
 </body>
 </html>
+
 
 
 
